--- a/package.json
+++ b/package.json
@@ -3,11 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mapbox/mapbox-gl-directions": "^4.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.21.4",
+    "bootstrap": "^5.1.0",
+    "js-cookie": "^3.0.1",
+    "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
+    "mapbox-gl": "^1.9.0",
+    "mapbox-gl-geocoder": "^2.0.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.0.0-beta.6",
+    "react-confirm-alert": "^2.7.0",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.1.1",
+    "react-image-gallery": "^1.2.7",
+    "react-js-pagination": "^3.0.3",
+    "react-leaflet": "^4.2.1",
+    "react-quill": "^2.0.0-beta.4",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
